--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -16,7 +16,7 @@
         <header class="main-header">
             <div class="container">
                 <a href="/" class="logo" style="display: flex; align-items: center;"><img src="/assets/InstituteCircle.png" alt="logo" style="width: 50px;">
-                    <img src="/assets/InstituteOSTxt.png" alt="" style="height: 40px;">
+                    InstituteOS
                 </a>
                 <nav class="main-nav">
                     <a href="/login" class="nav-link">Login</a>
