--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -22,7 +22,7 @@
                 <p class="subtitle" style="margin-bottom: 0.5rem;">Thank you for registering. Your institute is now under review. </p>
                 <p class="subtitle">You will be able to log in once your application is approved.</p>
                 <div class="form-footer" style="margin-top: 2rem;">
-                    <a href="/login" class="btn btn-primary">Back to Login</a>
+                    <a href="/login"><button class="btn btn-primary">Back to Login</button></a>
                 </div>
             </div>
         </div>
